--- a/ApiDocAggregator/wwwroot/swagger/Project2_v1.json
+++ b/ApiDocAggregator/wwwroot/swagger/Project2_v1.json
@@ -1,128 +1,34 @@
 {
   "openapi": "3.0.1",
   "info": {
-    "title": "WebApplication1",
+    "title": "ChatApplication",
     "version": "1.0"
   },
   "paths": {
-    "/api/MstState": {
-      "get": {
-        "tags": [
-          "MstState"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
+    "/api/Chat/SendMessage": {
       "post": {
         "tags": [
-          "MstState"
+          "Chat"
         ],
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/MstState"
+                "$ref": "#/components/schemas/ChatMessage"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/MstState"
+                "$ref": "#/components/schemas/ChatMessage"
               }
             },
-            "application/*+json": {
+            "application/*\u002Bjson": {
               "schema": {
-                "$ref": "#/components/schemas/MstState"
+                "$ref": "#/components/schemas/ChatMessage"
               }
             }
           }
         },
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/MstState/{ID}": {
-      "get": {
-        "tags": [
-          "MstState"
-        ],
-        "parameters": [
-          {
-            "name": "ID",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "MstState"
-        ],
-        "parameters": [
-          {
-            "name": "ID",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/MstState"
-              }
-            },
-            "text/json": {
-              "schema": {
-                "$ref": "#/components/schemas/MstState"
-              }
-            },
-            "application/*+json": {
-              "schema": {
-                "$ref": "#/components/schemas/MstState"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "MstState"
-        ],
-        "parameters": [
-          {
-            "name": "ID",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -172,48 +78,16 @@
   },
   "components": {
     "schemas": {
-      "MstState": {
+      "ChatMessage": {
         "type": "object",
         "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "stateCode": {
+          "user": {
             "type": "string",
             "nullable": true
           },
-          "state": {
+          "message": {
             "type": "string",
             "nullable": true
-          },
-          "countryCode": {
-            "type": "string",
-            "nullable": true
-          },
-          "cersaiStateCode": {
-            "type": "string",
-            "nullable": true
-          },
-          "activeFlag": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "createdBy": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "createdOn": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "modifiedBy": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "modifiedOn": {
-            "type": "string",
-            "format": "date-time"
           }
         },
         "additionalProperties": false
@@ -242,5 +116,10 @@
         "additionalProperties": false
       }
     }
-  }
+  },
+  "servers": [
+    {
+      "url": "https://localhost:7275/"
+    }
+  ]
 }
